##Text encoding: utf-8

2010-06-05  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: use gcu::Application::CreateObject().
	* libs/gcp/document.cc: ditto.
	* libs/gcp/fragment-residue.cc: ditto.
	* libs/gcp/residue.cc: ditto.
	* libs/gcp/residue.h: ditto.
	* libs/gcu/application.cc: ditto.
	* libs/gcu/application.h: ditto.
	* libs/gcu/chem3ddoc.cc: ditto.
	* libs/gcu/gcucrystalviewer.cc: ditto.
	* libs/gcu/molecule.cc: ditto.
	* libs/gcu/object.cc: ditto.
	* libs/gcu/object.h: ditto.
	* libs/gcu/residue.cc: ditto.
	* libs/gcu/residue.h: ditto.
	* plugins/loaders/cdx/cdx.cc: ditto.
	* plugins/paint/arrows/plugin.cc: ditto.
	* plugins/paint/atoms/plugin.cc: ditto.
	* plugins/paint/residues/plugin.cc: ditto.
	* plugins/paint/residues/residues-dlg.cc: ditto.
	* plugins/paint/selection/plugin.cc: ditto.
	* programs/calc/gchemcalc.cc: ditto.
	* programs/crystal/application.cc: ditto.

2010-06-04  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/application.cc: make object creation a per application mechanism.
	* libs/gcu/application.h: ditto.
	* libs/gcu/document.cc: ditto.
	* libs/gcu/document.h: ditto.
	* libs/gcu/object.cc: ditto.
	* libs/gcu/object.h: ditto.
	* plugins/paint/residues/plugin.cc: ditto.

2010-05-30  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/crystaldoc.cc: mix rhombohedral with hexagonal to be more or
	less consistent with cif files.
	* libs/gcu/spacegroup.cc: accept negative and decimal values in transforms.
	* plugins/loaders/cif/cif.cc: fixed some more files import.
	* programs/crystal/celldlg.cc: mix rhombohedral with hexagonal to be more or
	less consistent with cif files.

2010-05-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/Makefile.am: fixed build with LDFLAGS="-Wl,--no-undefined".
	[#29966]
	* libs/gcp/Makefile.am: ditto. (patch from Funda Wang)
	* libs/gcu/Makefile.am: ditto. (patch from Funda Wang)
	* plugins/loaders/cdx/Makefile.am: ditto.
	* plugins/loaders/cdxml/Makefile.am: ditto.